--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
+    <div class="wrapper">
+        <!-- 头部 -->
+        <header>
 
+        </header>
+        <!-- 主体 -->
+        <section>
+
+        </section>
+    </div>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
